--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -231,3 +231,10 @@ Social Buttons
     color: #fff;
 }
 /* jhipster-needle-css-add-main JHipster will add new css style */
+
+/* ==========================================================================
+Create Study Modal
+========================================================================== */
+.email-body{
+    height: 300px;
+}
