--- a/src/main/webapp/app/entities/study/study-confirm-invitation-ToAll.component.html
+++ b/src/main/webapp/app/entities/study/study-confirm-invitation-ToAll.component.html
@@ -1,4 +1,4 @@
-<form name="deleteForm" (ngSubmit)="confirmSend()">
+<form name="deleteForm" (ngSubmit)="confirmSendToAll()">
         <div class="modal-header">
             <h4 class="modal-title">Confirm Invitation</h4>
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -6,7 +6,7 @@
         </div>
         <div class="modal-body">
             <jhi-alert-error></jhi-alert-error>
-            <p>Are you sure you want to send this invitation?</p>
+            <p>Are you sure you want to send this invitation to all participants?</p>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
