--- a/src/main/webapp/app/entities/study/study-detail.component.html
+++ b/src/main/webapp/app/entities/study/study-detail.component.html
@@ -23,12 +23,21 @@
         <dd>
             <span class="break-new-line">{{study.emailBody}}</span>
         </dd>
+        <dt><span>FAQ</span></dt>
+        <dd>
+            <span>{{study.faq}}</span>
+        </dd>
+        <dt><span>FAQ</span></dt>
+        <dd>
+            <span>{{study.faq}}</span>
+        </dd>
         <dt><span>Participants</span></dt>
         <dd>
             <span *ngFor="let participant of study.participants; let last = last">
                 <a [routerLink]="['/participant', participant?.id ]">{{participant.email}}</a>{{last ? '' : ', '}}
             </span>
         </dd>
+
     </dl>
 
     <button type="submit"
@@ -53,11 +62,20 @@
 
     <button type="button"
             (click)="beginStudy()"
-            [routerLink]="['/', { outlets: { popup: 'study/'+ study.id + '/confirmSend'} }]"
+            [routerLink]="['/', { outlets: { popup: 'study/'+ study.id + '/confirmSendToAll'} }]"
             replaceUrl="true"
             class="btn btn-success">
-        <span class="fa fa-paper-plane"></span>&nbsp;<span> Send Invitation</span>
+        <span class="fa fa-paper-plane"></span>&nbsp;<span> Send Invitation To All Participants</span>
     </button>
+
+    <button type="button"
+            (click)="beginStudy()"
+            [routerLink]="['/', { outlets: { popup: 'study/'+ study.id + '/confirmSendToNew'} }]"
+            replaceUrl="true"
+            class="btn btn-success">
+        <span class="fa fa-paper-plane"></span>&nbsp;<span> Send Invitation To New Participants</span>
+    </button>
+
     <button *ngIf="this.study.status == status.ACTIVE" type="button"
             (click)="closeStudy()"
             class="btn btn-danger">
