--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -26,6 +26,24 @@
                         <textarea class="form-control" name="incentive" id="field_incentive" [(ngModel)]="study.incentive"></textarea>
                     </div>
                     <div class="form-group">
+                        <label class="form-control-label" for="field_faq">FAQ</label>
+                        <textarea class="form-control" name="faq" id="field_faq"
+                            [(ngModel)]="study.faq"  ></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="field_document">Documents</label>
+                        <select class="form-control" id="field_document" multiple name="document" [(ngModel)]="selectedDocuments">
+                            <option [ngValue]="d" *ngFor="let d of study.documents;">{{d.filename}}</option>
+                        </select>
+                        <button type="button" class="btn btn-danger" (click)="clearSelectedDocuments()">
+                            <span class="fa fa-remove"></span>&nbsp;<span>Remove</span>
+                        </button>
+                        <label class="btn-primary fileButton">
+                            <span class="fa fa-upload"></span>&nbsp;<span>Upload</span>
+                            <input type="file" (change)="fileSelected($event)"/>
+                        </label>
+                    </div>
+                    <div class="form-group">
                         <label for="field_participant">Participants</label>
                         <select class="form-control" id="field_participant" multiple name="participant" [(ngModel)]="study.participants">
                             <option [ngValue]="getSelected(study.participants, participantOption)" *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.email}}</option>
@@ -62,18 +80,105 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="changeTab('studyTab')">
-                        <span class="fa fa-arrow-left"></span>&nbsp;
-                        <span>Previous</span>
-                    </button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="clear()">
-                        <span class="fa fa-ban"></span>&nbsp;
-                        <span>Cancel</span>
-                    </button>
-                    <button type="submit" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
-                        <span class="fa fa-save"></span>&nbsp;
-                        <span>Save</span>
-                    </button>
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-6">
+                            <label class="control-label" for="templateList">Applying the template:</label>
+                                <select [ngModel]="selectedTemplate" (ngModelChange)="onTemplateChange($event)" name="templateList">
+                                    <option [ngValue]="i" *ngFor="let i of templates">{{i.name}}</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <button type="button" class="btn btn-warning col-lg-3" data-dismiss="modal" (click)="changeTab('emailTemplateTab')">
+                                <span class="fa fa-file-text"></span>&nbsp;
+                                <span>Manage Templates</span>
+                            </button>
+                            <div class="col-lg-3"></div>
+                            <button type="button" class="btn btn-primary col-lg-2" data-dismiss="modal" (click)="changeTab('studyTab')">
+                                <span class="fa fa-arrow-left"></span>&nbsp;
+                                <span>Previous</span>
+                            </button>
+                            <button type="button" class="btn btn-danger col-lg-2" data-dismiss="modal" (click)="clear()">
+                                <span class="fa fa-ban"></span>&nbsp;
+                                <span>Cancel</span>
+                            </button>
+                            <button type="submit" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary col-lg-2">
+                                <span class="fa fa-check-square"></span>&nbsp;
+                                <span>Save</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </ng-template>
+        </ngb-tab>
+        <ngb-tab id="emailTemplateTab" title="Manage Email Templates">
+            <ng-template ngbTabContent>
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myEmailLabel">Manage Email Templates</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label class="form-control-label" for="field_emailSubject">Subject</label>
+                        <input type="text" class="form-control" name="emailSubject" id="field_emailSubject" [(ngModel)]="manageTemplateSubject" />
+                    </div>
+                    <div class="form-group">
+                        <label class="form-control-label" for="field_emailBody">Body</label>
+                        <textarea class="form-control email-body" name="emailBody" id="field_emailBody" [(ngModel)]="manageTemplateBody"></textarea>
+                    </div>
+                    <div>
+                        <div class="row">
+                            <div class="col-lg-1"></div>
+                            <div class="col-lg-10">
+                                <div class="row">
+                                    <input type="text" class="form-control col-lg-6" [(ngModel)]="saveTemplateName" name="saveTemplateName" placeholder="To save the template, enter a name here."
+                                    maxlength="20"/>
+                                    <button type="button" class="btn btn-primary col-lg-3" data-dismiss="modal" (click)="saveTemplate()">
+                                        <span class="fa fa-save"></span>
+                                        <span>Save Template</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <label class="control-label" for="templateList">Applying the template:</label>
+                                <select [ngModel]="selectedManageTemplate" (ngModelChange)="onManageTemplateChange($event)" name="templateList">
+                                    <option [ngValue]="i" *ngFor="let i of templates">{{i.name}}</option>
+                                </select>
+                            </div>
+                            <div class="col-lg-6">
+                                <label class="form-text text-danger" id="statusMessage">
+                                    <!--leave blank for message set by component-->
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="row">
+                                    <button type="button" class="btn btn-danger col-lg-5" data-dismiss="modal" (click)="deleteTemplate()">
+                                        <span class="fa fa-times"></span>
+                                        <span>Delete Template</span>
+                                    </button>
+                                    <div class="col-lg-1"></div>
+                                    <button type="button" class="btn btn-warning col-lg-5" data-dismiss="modal" (click)="updateTemplate()">
+                                        <span class="fa fa-refresh"></span>
+                                        <span>Update Template</span>
+                                    </button>
+                                    <div class="col-lg-1"></div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4"></div>
+                            <button type="button" class="btn btn-primary col-lg-2" data-dismiss="modal" (click)="changeTab('emailTab')">
+                                <span class="fa fa-arrow-left"></span>
+                                <span>Back</span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </ng-template>
         </ngb-tab>
