--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -4,13 +4,16 @@
             <ng-template ngbTabContent>
                 <div class="modal-header">
                     <h4 class="modal-title" id="myStudyLabel">{{getTitle()}}</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="clear()">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="clear()">
+                        &times;
+                    </button>
                 </div>
                 <div class="modal-body">
                     <jhi-alert-error></jhi-alert-error>
                     <div class="form-group">
                         <label class="form-control-label" for="field_name">Title</label>
-                        <input type="text" class="form-control" name="name" id="field_name" [(ngModel)]="study.name" required />
+                        <input type="text" class="form-control" name="name" id="field_name" [(ngModel)]="study.name"
+                               required/>
                         <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
                             <small class="form-text text-danger" [hidden]="!editForm.controls.name?.errors?.required">
                                 This field is required.
@@ -19,9 +22,10 @@
                     </div>
                     <div class="form-group">
                         <label class="form-control-label" for="field_description">Description</label>
-                        <textarea class="form-control" name="description" id="field_description" [(ngModel)]="study.description"></textarea>
+                        <textarea class="form-control" name="description" id="field_description"
+                                  [(ngModel)]="study.description"></textarea>
                     </div>
-                       <div class="form-group">
+                    <div class="form-group">
                         <label class="form-control-label" for="field_incentive_type">Incentive Type</label>
                         <select class="form-control" [(ngModel)]="study.incentiveType"
                                 name="incentiveType" id="field_incentive_type">
@@ -30,15 +34,20 @@
                             <option value="OTHER">Other</option>
                         </select>
                     </div>
-        <div class="form-group">
-            <label class="form-control-label" for="field_incentive_detail">Incentive Details (ie amount)</label>
-            <textarea class="form-control" name="incentiveDetail" id="field_incentive_detail"
-                      [(ngModel)]="study.incentiveDetail"></textarea>
-        </div>
+                    <div class="form-group">
+                        <label class="form-control-label" for="field_incentive_detail">Incentive Details (ie
+                            amount)</label>
+                        <textarea class="form-control" name="incentiveDetail" id="field_incentive_detail"
+                                  [(ngModel)]="study.incentiveDetail"></textarea>
+                    </div>
                     <div class="form-group">
                         <label for="field_participant">Participants</label>
-                        <select class="form-control" id="field_participant" multiple name="participant" [(ngModel)]="study.participants">
-                            <option [ngValue]="getSelected(study.participants, participantOption)" *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.email}}</option>
+                        <select class="form-control" id="field_participant" multiple name="participant"
+                                [(ngModel)]="study.participants">
+                            <option [ngValue]="getSelected(study.participants, participantOption)"
+                                    *ngFor="let participantOption of participants; trackBy: trackParticipantById">
+                                {{participantOption.email}}
+                            </option>
                         </select>
                     </div>
                 </div>
@@ -58,17 +67,21 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label class="form-control-label" for="field_emailSubject">Subject</label>
-                        <input type="text" class="form-control" name="emailSubject" id="field_emailSubject" [(ngModel)]="study.emailSubject" required
+                        <input type="text" class="form-control" name="emailSubject" id="field_emailSubject"
+                               [(ngModel)]="study.emailSubject" required
                         />
-                        <div [hidden]="!(editForm.controls.emailSubject?.dirty && editForm.controls.emailSubject?.invalid)">
-                            <small class="form-text text-danger" [hidden]="!editForm.controls.emailSubject?.errors?.required">
+                        <div
+                            [hidden]="!(editForm.controls.emailSubject?.dirty && editForm.controls.emailSubject?.invalid)">
+                            <small class="form-text text-danger"
+                                   [hidden]="!editForm.controls.emailSubject?.errors?.required">
                                 This field is required.
                             </small>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="form-control-label" for="field_emailBody">Body</label>
-                        <textarea class="form-control email-body" name="emailBody" id="field_emailBody" [(ngModel)]="study.emailBody"></textarea>
+                        <textarea class="form-control email-body" name="emailBody" id="field_emailBody"
+                                  [(ngModel)]="study.emailBody"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
