--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -19,10 +19,10 @@
             <form name="form" role="form" (ngSubmit)="changePassword()" #passwordForm="ngForm">
                     <div class="form-group">
                             <label class="form-control-label" for="currentPassword">Current password</label>
-                            <input type="password" class="form-control" id="currentPassword" name="currentPassword" #currentPasswordInput="ngModel"
+                            <input (keydown.backspace) = "unblockErrors(1)" type="password" class="form-control" id="currentPassword" name="currentPassword" #currentPasswordInput="ngModel"
                             placeholder="Current password"
                                    [(ngModel)]="currentPassword" minlength=4 maxlength=50 required>
-                            <div *ngIf="currentPasswordInput.dirty && currentPasswordInput.invalid">
+                            <div *ngIf="currentPasswordInput.dirty && currentPasswordInput.invalid && !errorBlock1" >
                                 <small class="form-text text-danger"
                                    *ngIf="currentPasswordInput.errors.required">
                                     Your password is required.
@@ -39,10 +39,10 @@
                     </div>
                 <div class="form-group">
                     <label class="form-control-label" for="password"> New password</label>
-                    <input type="password" class="form-control" id="password" name="password" #passwordInput="ngModel"
+                    <input (keydown.backspace) = "unblockErrors(2)" type="password" class="form-control" id="password" name="password" #passwordInput="ngModel"
                     placeholder="New password"
                            [(ngModel)]="password" minlength=4 maxlength=50 required validateEqual="confirmPassword" editingNew="true">
-                    <div *ngIf="passwordInput.dirty && passwordInput.invalid">
+                    <div *ngIf="passwordInput.dirty && passwordInput.invalid && !errorBlock2">
                         <small class="form-text text-danger"
                            *ngIf="passwordInput.errors.required">
                             Your password is required.
@@ -60,10 +60,10 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="confirmPassword">New password confirmation</label>
-                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" #confirmPasswordInput="ngModel"
+                    <input (keydown.backspace) = "unblockErrors(3)" type="password" class="form-control" id="confirmPassword" name="confirmPassword" #confirmPasswordInput="ngModel"
                     placeholder="Confirm the new password"
                            [(ngModel)]="confirmPassword" minlength=4 maxlength=50 required validateEqual="password">
-                    <div *ngIf="confirmPasswordInput.dirty && confirmPasswordInput.invalid">
+                    <div *ngIf="confirmPasswordInput.dirty && confirmPasswordInput.invalid && !errorBlock3">
                         <small class="form-text text-danger"
                            *ngIf="confirmPasswordInput.errors.required">
                             Your confirmation password is required.
