Fixing issue #99 and fixing type on about page
Copy button colour was changed and a small typo on the about page was fixed

--- a/src/main/webapp/app/entities/about/about.component.html
+++ b/src/main/webapp/app/entities/about/about.component.html
@@ -41,7 +41,7 @@
             <div class="col-6">
                 <h2>About the project</h2>
                 <p>
-                    QaulOpt was originally worked on by Fraser Lewis-Smith and Dinal Wanniarachchi. QualOpt was then 
+                    QualOpt was originally worked on by Fraser Lewis-Smith and Dinal Wanniarachchi. QualOpt was then 
                     further developed by the students of SoftEng 701. QualOpt was developed under the supervision of Dr. Kelly Blincoe.
                     <!-- TODO: More participant info here -->
                 </p>
